--- a/test/fixtures/core_strength_classes.yml
+++ b/test/fixtures/core_strength_classes.yml
@@ -15,3 +15,19 @@ two:
   timezone: MyString
   description: MyString
   facilitator_id: 1
+
+csc_100:
+  name: Core Strength Class 100
+  start_date: 2022-02-23 15:54:49
+  end_date: 2022-02-23 15:54:49
+  timezone: MyString
+  description: MyString
+  facilitator_id: 1
+
+csc_101:
+  name: MyString
+  start_date: 2022-02-23 15:54:49
+  end_date: 2022-02-23 15:54:49
+  timezone: MyString
+  description: MyString
+  facilitator_id: 1
